# ResoBoost

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  publish.yml
src/: App.tsx  style.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/dns_tester/: mod.rs  servers.rs  tls_hosts.rs
src-tauri/src/dns_tester - old/: mod.rs  servers.rs  tls_hosts.rs
src-tauri/src/speed_tester/: mod.rs
src/components/: DnsCard.tsx  Header.tsx  ProgressBar.tsx  ServersModal.tsx  Sidebar.tsx  Stepper.tsx
src/pages/: DnsBenchmark.tsx  SpeedTest.tsx
src/utils/: export.ts
