[package]
name = "resoboost"
version = "0.1.0"
description = "A Tauri App"
authors = ["ed"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "resoboost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full", "sync"] }
lazy_static = "1.5.0"
futures = "0.3.31"
url = "2.5.7"
tracing = "0.1.40"
idna = "0.5.0"
hickory-resolver = { version = "0.25.2", features = ["backtrace", "dnssec-ring", "h3-ring", "https-ring", "quic-ring", "rustls-platform-verifier", "serde", "tls-ring", "webpki-roots"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }
serde_yaml = "0.9"
once_cell = "1.18"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
